# smart-search

./: .gitignore  .mcp.json  .mcp.json.example  CHANGELOG.md  IR_RESEARCH_FINDINGS_2023_2026.md  README.md  index.html  install.py  matryoshka-dimension-research.md  pyproject.toml  smart_search.spec
desktop/: build-installers.sh  build.sh  package-lock.json  package.json  vite.config.ts
desktop/mockups/: dashboard.html  folders.html
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/: .gitignore  Cargo.toml  nsis-hooks.nsh  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs
desktop/src/components/: Dashboard.tsx  EmptyState.tsx  FolderManager.tsx  IndexingBanner.tsx  IndexingControls.tsx  IndexingLog.tsx  ModelDownloadBanner.tsx  ModelTimeoutDialog.tsx  QuickSearch.tsx  Settings.tsx  ShortcutRecorder.tsx  Sidebar.tsx  Skeleton.tsx  StatsCard.tsx
desktop/src/components/settings/: AppearanceSettings.tsx  EmbeddingSettings.tsx  SearchSettings.tsx  SettingsLayout.tsx  SystemSettings.tsx
desktop/src/lib/: animations.ts  api-types.ts  api.ts  constants.ts  format.ts
docs/: knowledge-system-blueprint.md  llm-wiki-karpathy-with-summary.md  meetings-pilot-plan.md  retrieval-architecture.html  search-architecture.md  search-pipeline.html  session-start-prompt.md
docs/plans/: 2026-03-06-v02-daily-use-markdown-design.md  2026-03-06-v02-implementation-plan.md  20260406_layered-retrieval-architecture.md  improve-retriever-performance.md
docs/system-design/: current-state.html  index.html  skills.html  smart-search-vs-qmd.html  styles.css  vault-structure.html  workflow.html
src/smart_search/: __init__.py  __main__.py  chunker.py  cli.py  cli_index.py  cli_search.py  config.py  config_manager.py  constants.py  conversion_worker.py  data_dir.py  embedder.py  embedder_utils.py  ephemeral_registry.py  ephemeral_store.py  fts.py  fusion.py  gpu_provider.py  http.py  http_models.py  http_routes.py  http_routes_ephemeral.py  http_routes_model.py  index_metadata.py  indexer.py  indexing_task.py  markdown_chunker.py  markitdown_parser.py  mcp_client.py  mcp_formatters.py  mmr.py  model_download.py  model_importer.py  model_registry.py  models.py  protocols.py  query_preprocessor.py  reader.py  reranker.py  search.py  (+7 more)
tests/: conftest.py  test_chunker.py  test_cli.py  test_config.py  test_config_manager.py  test_config_timeout.py  test_conversion_worker.py  test_data_dir.py  test_embedder.py  test_embedder_lifecycle.py  test_embedder_timeout.py  test_ephemeral_registry.py  test_ephemeral_server.py  test_ephemeral_store.py  test_fts.py  test_fusion.py  test_gpu_provider.py  test_http.py  test_http_pause.py  test_index_metadata.py  test_indexer.py  test_indexing_gate.py  test_indexing_task.py  test_markdown_chunker.py  test_markitdown_parser.py  test_mmr.py  test_model_download.py  test_model_import.py  test_model_importer.py  test_model_registry.py  test_models.py  test_pause_resume.py  test_phase1_model_upgrade.py  test_protocols.py  test_query_preprocessor.py  test_reader.py  test_relevance_threshold.py  test_repair.py  test_reranker.py  test_retry_on_model.py  (+6 more)
