[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-search"
version = "0.3.1"
description = "Local MCP server for semantic search over Markdown, PDF, DOCX, PPTX, XLSX, and HTML documents"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "markitdown[all]",
    "lancedb",
    "sentence-transformers",
    "optimum[onnxruntime]",
    "pyarrow",
    "pydantic>=2.0",
    "pydantic-settings",
    "einops",
    "tqdm",
    "watchdog",
]

[project.scripts]
smart-search = "smart_search.cli:main"
smart-search-server = "smart_search.server:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "reportlab",
    "python-docx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = ["slow: Tests that load ML models or process real files"]
