[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-search"
version = "0.8.5"
description = "Local MCP server for semantic search over Markdown, PDF, DOCX, PPTX, XLSX, and HTML documents"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "markitdown[all]",
    "lancedb",
    "pylance",
    "onnxruntime",
    "huggingface-hub",
    "tokenizers",
    "pyarrow",
    "pydantic>=2.0",
    "pydantic-settings",
    "numpy",
    "tqdm",
    "watchdog",
    "fastapi",
    "uvicorn[standard]",
]

[project.scripts]
smart-search = "smart_search.cli:main"
smart-search-server = "smart_search.server:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-timeout",
    "reportlab",
    "python-docx",
    "httpx",
]
bundle = [
    "pyinstaller>=6.0",
]
# transformers is only needed if tokenizer.json is missing from the HF cache.
# At runtime, the lightweight standalone tokenizers (Rust) handles tokenization.
download = [
    "transformers",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
timeout = 30
markers = ["slow: Tests that load ML models or process real files"]
